[tool.poetry]
name = "blackhole"
version = "0.1.0"
description = "Blackhole provides a webapp api for recording camera-tracking data into USD files while storing all take metadata inside a SQL database."
authors = [
    "Andrew Bueno <andrew.bueno@magnopus.com>"
]
maintainers = [
    "Andrew Bueno <andrew.bueno@magnopus.com>",
    "Lily Pitts <lily.pitts@magnopus.com>"
]
license = "Apache-2.0"
readme = "README.md"
include = [
    "blackhole_config/*"
]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
annotated-types = "^0.5.0"
anyio = "^3.7.1"
attrs = "^23.1.0"
binary-fractions = "^1.1.0"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.7"
clickclick = "^20.10.2"
colorama = "^0.4.6"
connexion = "^2.14.2"
dnspython = "^2.4.2"
email-validator = "^2.0.0.post2"
et-xmlfile = "^1.1.0"
exceptiongroup = "^1.1.3"
fastapi = "^0.103.1"
Flask = "^2.2.5"
greenlet = "^2.0.2"
h11 = "^0.14.0"
httpcore = "^0.18.0"
httptools = "^0.6.0"
httpx = "^0.25.0"
idna = "^3.4"
inflection = "^0.5.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
jsonschema = "^4.19.0"
jsonschema-specifications = "^2023.7.1"
MarkupSafe = "^2.1.3"
openpyxl = "^3.1.2"
orjson = "^3.9.7"
packaging = "^23.1"
pydantic = "^2.3.0"
pydantic-extra-types = "^2.1.0"
pydantic-settings = "^2.0.3"
pydantic_core = "^2.6.3"
PyOpenGL = "^3.1.7"
PySide6 = "^6.6.0"
PySide6-Addons = "^6.6.0"
PySide6-Essentials = "^6.6.0"
python-dateutil = "^2.6.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
PyYAML = "^6.0.1"
referencing = "^0.30.2"
requests = "^2.31.0"
rpds-py = "^0.10.2"
shiboken6 = "^6.6.0"
six = "^1.16.0"
sniffio = "^1.3.0"
SQLAlchemy = "^2.0.20"
starlette = "^0.27.0"
swagger-ui-bundle = "^0.0.9"
timecode = "^1.3.1"
typing_extensions = "^4.7.1"
ujson = "^5.8.0"
urllib3 = "^2.0.4"
usd-core = "^23.11"
uvicorn = "^0.23.2"
watchfiles = "^0.20.0"
websockets = "^11.0.3"
Werkzeug = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
