[tool.poetry]
name = "blackhole"
version = "0.1.0"
description = "Blackhole provides a webapp api for recording camera-tracking data into USD files while storing all take metadata inside a SQL database."
authors = [
    "Andrew Bueno <andrew.bueno@magnopus.com>"
]
maintainers = [
    "Andrew Bueno <andrew.bueno@magnopus.com>",
    "Lily Pitts <lily.pitts@magnopus.com>"
]
license = "Apache-2.0"
readme = "README.md"
include = [
    "blackhole_config/*"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^2.3.0"
timecode = "^1.3.1"
usd-core = "^23.11"
uvicorn = "^0.23.2"
fastapi = "^0.110.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
